--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -6,206 +6,206 @@
     }
   },
   "AllowedHosts": "*",
-  "version": 20260101.0,
+  "version": 20260201.0,
   "uris": {
     //accueil
     "accueil": {
-      "label": "retourner à l'accueil",
       "location": "/",
-      "content": "Accueil"
+      "content": "Accueil",
+      "label": "retourner à l'accueil"
     },
     //formations
     "formations": {
-      "label": "voir les formations",
       "location": "/formations",
-      "content": "Formations"
+      "content": "Formations",
+      "label": "voir les formations"
     },
     "catalogue": {
-      "label": "voir le catalogue de formations",
       "location": "#catalogue",
-      "content": "Catalogue de formations"
+      "content": "Catalogue de formations",
+      "label": "voir le catalogue de formations"
     },
     "perfectionnement": {
-      "label": "voir les formations de perfectionnement",
       "location": "#perfectionnement",
-      "content": "Perfectionnement"
+      "content": "Perfectionnement",
+      "label": "voir les formations de perfectionnement"
     },
     //actualites
     "actualites": {
-      "label": "voir les actualités",
       "location": "/actualites",
-      "content": "Actualités"
+      "content": "Actualités",
+      "label": "voir les actualités"
     },
     //abmpaie
     "abmpaie": {
-      "label": "en savoir plus sur ABM Paie",
       "location": "/abmpaie",
-      "content": "ABM Paie"
+      "content": "ABM Paie",
+      "label": "en savoir plus sur ABM Paie"
     },
     "organigramme": {
-      "label": "en savoir plus sur l'organigramme d'ABM Paie",
       "location": "#organigramme",
-      "content": "Organigramme"
+      "content": "Organigramme",
+      "label": "en savoir plus sur l'organigramme d'ABM Paie"
     },
     "equipe": {
-      "label": "en savoir plus sur l'équipe pédagogique",
       "location": "#equipe",
-      "content": "Équipe pédagogique"
+      "content": "Équipe pédagogique",
+      "label": "en savoir plus sur l'équipe pédagogique"
     },
     "indicateurs": {
-      "label": "voir les indicateurs formation",
       "location": "#indicateurs",
-      "content": "Les indicateurs formation"
+      "content": "Les indicateurs formation",
+      "label": "voir les indicateurs formation"
     },
     "valeurs": {
-      "label": "en savoir plus sur mes valeurs",
       "location": "#valeurs",
-      "content": "Mes valeurs"
+      "content": "Mes valeurs",
+      "label": "en savoir plus sur mes valeurs"
     },
     "ref-assistance": {
-      "label": "voir mes références Assistance technique et pédagogique",
       "location": "#ref-assistance",
-      "content": "Référente Assistance technique et pédagogique"
+      "content": "Référente Assistance technique et pédagogique",
+      "label": "voir mes références Assistance technique et pédagogique"
     },
     "ref-handicap": {
-      "label": "voir mes référence handicap",
       "location": "#ref-handicap",
-      "content": "Référente handicap"
+      "content": "Référente handicap",
+      "label": "voir mes référence handicap"
     },
     "qualiopi": {
-      "label": "voir ma certification QUALIOPI",
       "location": "#qualiopi",
-      "content": "Certification QUALIOPI"
+      "content": "Certification QUALIOPI",
+      "label": "voir ma certification QUALIOPI"
     },
     //experience
     "experience": {
-      "label": "découvrir mon parcours/expérience",
       "location": "/experience",
-      "content": "Expérience"
+      "content": "Expérience",
+      "label": "découvrir mon parcours/expérience"
     },
     "cv": {
-      "label": "voir mon curriculum vitae",
       "location": "/resources/ABMq_CV.pdf",
       "content": "Curriculum Vitae",
+      "label": "voir mon curriculum vitae",
       "isexternal": true
     },
     "silae": {
-      "label": "voir mon expérience en tant que salariée Silae",
       "location": "#silae",
-      "content": "Salariée Silae"
+      "content": "Salariée Silae",
+      "label": "voir mon expérience en tant que salariée Silae"
     },
     "chiffres": {
-      "label": "voir les chiffres en tant que formatrice Silae",
       "location": "#chiffres",
-      "content": "Formatrice Silae en chiffres"
+      "content": "Formatrice Silae en chiffres",
+      "label": "voir les chiffres en tant que formatrice Silae"
     },
     "cafel": {
-      "label": "en savoir plus sur mes études CAFEL",
       "location": "#cafel",
-      "content": "Étudiante CAFEL"
+      "content": "Étudiante CAFEL",
+      "label": "en savoir plus sur mes études CAFEL"
     },
     //contact
     "contact": {
-      "label": "me contacter",
       "location": "/contact",
-      "content": "Contact"
+      "content": "Contact",
+      "label": "me contacter"
     },
     "reserver": {
-      "label": "réserver un créneau horaire",
       "location": "#reserver",
-      "content": "Réserver un créneau horaire"
+      "content": "Réserver un créneau horaire",
+      "label": "réserver un créneau horaire"
     },
     "coordonnees": {
-      "label": "voir mes coordonnées",
       "location": "#coordonnees",
-      "content": "Coordonnées"
+      "content": "Coordonnées",
+      "label": "voir mes coordonnées"
     },
     "pages-officielles": {
-      "label": "découvrir mes pages officielles",
       "location": "#pages-officielles",
-      "content": "Pages officielles"
+      "content": "Pages officielles",
+      "label": "découvrir mes pages officielles"
     },
     "rendez-vous": {
-      "label": "prendre un rendez-vous",
       "location": "https://outlook.office365.com/owa/calendar/rdv@abmq.fr/bookings/",
       "content": "Prise de rendez-vous",
+      "label": "prendre un rendez-vous",
       "isexternal": true
     },
     "call": {
-      "label": "me joindre par appel téléphonique",
       "location": "tel:+33748106539",
       "content": "Appel",
+      "label": "me joindre par appel téléphonique",
       "isexternal": true
     },
     "sms": {
-      "label": "me joindre par SMS",
       "location": "sms://+33748106539;?&body=Bonjour%20Marine%20MARQUIS%2C%0A",
       "content": "SMS",
+      "label": "me joindre par SMS",
       "isexternal": true
     },
     "whatsapp": {
-      "label": "me joindre par WhatsApp",
       "location": "https://wa.me/33748106539?text=Bonjour%20Marine%20MARQUIS%2C%0A",
       "content": "WhatsApp",
+      "label": "me joindre par WhatsApp",
       "isExternal": true
     },
     "linkedin": {
-      "label": "voir mon profil LinkedIn",
       "location": "https://www.linkedin.com/in/abm-paie-1b551a336",
       "content": "Voir mon profil LinkedIn",
+      "label": "voir mon profil LinkedIn",
       "isexternal": true
     },
     //partenariats
     "partenariats": {
-      "label": "découvrir mes partenaires",
       "location": "#partenariats",
-      "content": "Partenariats"
+      "content": "Partenariats",
+      "label": "découvrir mes partenaires"
     },
     "facilae": {
-      "label": "visiter Facilae Paie",
       "location": "https://www.facilaepaie.com",
-      "description": "\"Facilite vos migrations et vos paramétrages dans Silae...\"",
       "content": "Facilae Paie",
-      "isexternal": true
+      "label": "visiter Facilae Paie",
+      "isexternal": true,
+      "description": "« Facilite vos migrations et vos paramétrages dans Silae... »"
     },
     "prismatik": {
-      "label": "visiter Prismatik",
       "location": "https://www.prismatik.fr/",
-      "description": "\"Chez Prismatik, nous créons des jeux sérieux physiques et sur-mesure\"",
       "content": "Prismatik",
-      "isexternal": true
+      "label": "visiter Prismatik",
+      "isexternal": true,
+      "description": "« Chez Prismatik, nous créons des jeux sérieux physiques et sur-mesure »"
     }
   },
   "mailtos": {
     //abmq.fr
     "paie-formation": {
-      "label": "contacter ABM Paie par email",
       "location": "mailto:paie-formation@abmq.fr",
-      "content": "paie-formation@abmq.fr"
+      "content": "paie-formation@abmq.fr",
+      "label": "contacter ABM Paie par email"
     },
     "ref-handicap": {
-      "label": "envoyer un mail pour une demande sur le handicap",
       "location": "mailto:referent-handicap@abmq.fr",
-      "description": "Sur le handicap",
-      "content": "referent-handicap@abmq.fr"
+      "content": "referent-handicap@abmq.fr",
+      "label": "envoyer un mail pour une demande sur le handicap",
+      "description": "Sur le handicap"
     },
     "assistance": {
-      "label": "envoyer un mail pour une demande sur l'assistance technique et pédagogique'",
       "location": "mailto:assistance-technique-pedagogique@abmq.fr",
-      "description": "Sur l'assistance technique et pédagogique",
-      "content": "assistance-technique-pedagogique@abmq.fr"
+      "content": "assistance-technique-pedagogique@abmq.fr",
+      "label": "envoyer un mail pour une demande sur l'assistance technique et pédagogique'",
+      "description": "Sur l'assistance technique et pédagogique"
     },
     "facturation": {
-      "label": "envoyer un mail pour une demande sur la facturation",
       "location": "mailto:paie-facturation@abmq.fr",
-      "description": "Sur la facturation",
-      "content": "paie-facturation@abmq.fr"
+      "content": "paie-facturation@abmq.fr",
+      "label": "envoyer un mail pour une demande sur la facturation",
+      "description": "Sur la facturation"
     },
     "historique-versions": {
-      "label": "envoyer un mail pour une demande sur l'historique des versions",
       "location": "mailto:paie-historique-versions@abmq.fr",
-      "description": "Sur l'historique des versions",
-      "content": "paie-historique-versions@abmq.fr"
+      "content": "paie-historique-versions@abmq.fr",
+      "label": "envoyer un mail pour une demande sur l'historique des versions",
+      "description": "Sur l'historique des versions"
     }
   },
   "images": {
