--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -70,7 +70,7 @@
     "ref-handicap": {
       "location": "#ref-handicap",
       "content": "Référente handicap",
-      "label": "voir mes référence handicap"
+      "label": "voir mes références handicap"
     },
     "qualiopi": {
       "location": "#qualiopi",
@@ -84,7 +84,7 @@
       "label": "découvrir mon parcours/expérience"
     },
     "cv": {
-      "location": "/resources/ABMq_CV.pdf",
+      "location": "/resources/experience/MMarquis-CV.pdf",
       "content": "Curriculum Vitae",
       "label": "voir mon curriculum vitae",
       "isexternal": true
@@ -221,11 +221,11 @@
     //mjo
     "absences": {
       "label": "Dessin d'absence",
-      "source": "/images/mjo/ABMq_Absences.jpg"
+      "source": "/images/mjo/ABMq-Absences.jpg"
     },
     "certifications": {
       "label": "Dessin de certification",
-      "source": "images/mjo/ABMq_Certifications.png"
+      "source": "images/mjo/ABMq-Certifications.png"
     },
     //partenariats
     "facilae": {
