- feat: drawing - refactor: rename templates - fix: panels

--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -47,11 +47,6 @@
       "content": "Organigramme",
       "label": "en savoir plus sur l'organigramme d'ABM Paie"
     },
-    "equipe": {
-      "location": "#equipe",
-      "content": "Équipe pédagogique",
-      "label": "en savoir plus sur l'équipe pédagogique"
-    },
     "indicateurs": {
       "location": "#indicateurs",
       "content": "Les indicateurs formation",
@@ -61,16 +56,6 @@
       "location": "#valeurs",
       "content": "Mes valeurs",
       "label": "en savoir plus sur mes valeurs"
-    },
-    "ref-assistance": {
-      "location": "#ref-assistance",
-      "content": "Référente Assistance technique et pédagogique",
-      "label": "voir mes références Assistance technique et pédagogique"
-    },
-    "ref-handicap": {
-      "location": "#ref-handicap",
-      "content": "Référente handicap",
-      "label": "voir mes références handicap"
     },
     "qualiopi": {
       "location": "#qualiopi",
@@ -84,7 +69,7 @@
       "label": "découvrir mon parcours/expérience"
     },
     "cv": {
-      "location": "/resources/experience/MMarquis-CV.pdf",
+      "location": "/resources/experience/MMarquis-CV-2026.pdf",
       "content": "Curriculum Vitae",
       "label": "voir mon curriculum vitae",
       "isexternal": true
@@ -103,6 +88,16 @@
       "location": "#cafel",
       "content": "Étudiante CAFEL",
       "label": "en savoir plus sur mes études CAFEL"
+    },
+    "ref-assistance": {
+      "location": "#ref-assistance",
+      "content": "Référente Assistance technique et pédagogique",
+      "label": "voir mes références Assistance technique et pédagogique"
+    },
+    "ref-handicap": {
+      "location": "#ref-handicap",
+      "content": "Référente handicap",
+      "label": "voir mes références handicap"
     },
     //contact
     "contact": {
@@ -219,6 +214,14 @@
       "source": "/logos/abm-paie/abm-paie_banner_v3.svg"
     },
     //mjo
+    "mjo-signature": {
+      "label": "Signature de Mjo",
+      "source": "images/mjo/Mjo-Signature.svg"
+    },
+    "mmarquis-avatar": {
+      "label": "Avatar de Marine Marquis",
+      "source": "images/mjo/ABMq-MMarquis-Avatar.png"
+    },
     "absences": {
       "label": "Dessin d'absence",
       "source": "/images/mjo/ABMq-Absences.jpg"
